--- a/modules/program.yaml
+++ b/modules/program.yaml
@@ -25,25 +25,8 @@
     }
     EOF
 
-# - repo: tyru/caw.vim
-#   depends: context_filetype.vim
-#   on_map: { nx: <Plug> }
-#   hook_add: |
-#     function! InitCaw() abort
-#       if !&l:modifiable
-#         silent! nunmap <buffer> gc
-#         silent! xunmap <buffer> gc
-#         silent! nunmap <buffer> gcc
-#         silent! xunmap <buffer> gcc
-#       else
-#         nmap <buffer> gc <Plug>(caw:prefix)
-#         xmap <buffer> gc <Plug>(caw:prefix)
-#         nmap <buffer> gcc <Plug>(caw:hatpos:toggle)
-#         xmap <buffer> gcc <Plug>(caw:hatpos:toggle)
-#       endif
-#     endfunction
-#     autocmd FileType * call InitCaw()
-#     call InitCaw()
+- repo: glepnir/prodoc.nvim
+  on_event: BufReadPre
 
 - repo: liuchengxu/vista.vim
   on_cmd: [Vista, Vista!, Vista!!]
