update telescope conf

--- a/modules/fuzzyfind.yaml
+++ b/modules/fuzzyfind.yaml
@@ -3,12 +3,15 @@
   hook_source: |-
     lua <<EOF
       require('telescope').setup {
-          extensions = {
-              fzy_native = {
-                  override_generic_sorter = false,
-                  override_file_sorter = true,
-              }
-          }
+        defaults = {
+          prompt_position = 'top'
+        },
+        extensions = {
+            fzy_native = {
+                override_generic_sorter = false,
+                override_file_sorter = true,
+            }
+        }
       }
       require('telescope').load_extension('fzy_native')
       require'telescope'.load_extension('dotfiles')
