--- a/modules/completion.yaml
+++ b/modules/completion.yaml
@@ -20,13 +20,16 @@
       min_length = 1;
       preselect = 'always';
       allow_prefix_unmatch = false;
-
       source = {
         path = true;
         buffer = true;
+        calc = true;
         vsnip = true;
         nvim_lsp = true;
         nvim_lua = true;
+        spell = true;
+        tags = true;
+        snippets_nvim = true;
       };
     }
     EOF
