--- a/modules/completion.yaml
+++ b/modules/completion.yaml
@@ -6,9 +6,8 @@
     EOF
 
 - repo: glepnir/lspsaga.nvim
-  on_event: BufRead
   on_cmd: Lspsaga
-  depends: nvim-lspconfig
+  on_source: nvim-lspconfig
 
 - repo: hrsh7th/nvim-compe
   on_event: InsertEnter
