--- a/modules/completion.yaml
+++ b/modules/completion.yaml
@@ -46,7 +46,7 @@
     let g:sonictemplate_vim_template_dir = getenv("HOME") . '/.config/nvim/template'
 
 - repo: cohama/lexima.vim
-  on_event: InsertCharPre
+  on_event: InsertEnter
 
 - repo: mattn/emmet-vim
   on_event: InsertEnter
