--- a/modules/program.yaml
+++ b/modules/program.yaml
@@ -51,6 +51,10 @@
     let g:gutentags_cache_dir = getenv("HOME").'/.cache/vim/tags'
     let g:gutentags_project_root = ['.root', '.git', '.svn','.project','go.mod','.Cargo.toml','tsconfig.js','jsconfig.js']
     let g:gutentags_exclude_project_root = [ '/usr/local' ]
+    let g:gutentags_generate_on_write = 0
+    let g:gutentags_generate_on_missing = 0
+    let g:gutentags_generate_on_new = 0
+    let g:gutentags_exclude_filetypes = [ 'NvimTree']
 
 - repo: mhartington/formatter.nvim
   on_ft: [typescript,typescriptreact,lua]
