--- a/modules/completion.yaml
+++ b/modules/completion.yaml
@@ -45,8 +45,14 @@
     let g:sonictemplate_postfix_key = '<C-j>'
     let g:sonictemplate_vim_template_dir = getenv("HOME") . '/.config/nvim/template'
 
-- repo: cohama/lexima.vim
+- repo: Raimondi/delimitMate
   on_event: InsertEnter
+  hook_source: |
+    let g:delimitMate_expand_cr = 0
+    let g:delimitMate_expand_space = 1
+    let g:delimitMate_smart_quotes = 1
+    let g:delimitMate_expand_inside_quotes = 0
+    au FileType markdown let b:delimitMate_nesting_quotes = ["`"]
 
 - repo: mattn/emmet-vim
   on_event: InsertEnter
