--- a/modules/program.yaml
+++ b/modules/program.yaml
@@ -64,8 +64,8 @@
           lua = {
               luafmt = function()
                 return {
-                  exe = "luafmt",
-                  args = {"--indent-count", 2, "--stdin"},
+                  exe = "lua-format",
+                  args = {"-i", "--config", ".luafmt"}
                   stdin = true
                   }
                 end
