add indent in treesitter

--- a/modules/filetype.yaml
+++ b/modules/filetype.yaml
@@ -12,6 +12,9 @@
         highlight = {
           enable = true,
         },
+        indent = {
+          enable = true
+        },
         textobjects = {
           select = {
             enable = true,
