--- a/modules/fuzzyfind.yaml
+++ b/modules/fuzzyfind.yaml
@@ -7,7 +7,9 @@
           prompt_prefix = '🍔 ',
           prompt_position = 'top',
           sorting_strategy = 'ascending',
-          file_previewer = require'telescope.previewers'.vim_buffer_cat.new
+          file_previewer = require'telescope.previewers'.vim_buffer_cat.new,
+          grep_previewer = require'telescope.previewers'.vim_buffer_vimgrep.new,
+          qflist_previewer = require'telescope.previewers'.vim_buffer_qflist.new,
         },
         extensions = {
             fzy_native = {
